--- a/kite-app-parent/cdh5/pom.xml
+++ b/kite-app-parent/cdh5/pom.xml
@@ -74,6 +74,7 @@
   </scm>
 
   <properties>
+    <scala.binary.version>${cdh.scala.binary.version}</scala.binary.version>
     <!-- dependency version properties -->
     <kite.version>1.0.0-cdh6.x-SNAPSHOT</kite.version>
     <kite.avro.version>${cdh.avro.version}</kite.avro.version>
@@ -384,7 +385,7 @@
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.10</artifactId>
+      <artifactId>spark-core_${scala.binary.version}</artifactId>
       <scope>provided</scope>
       <optional>true</optional>
       <exclusions>
@@ -415,7 +416,7 @@
     <dependencies>
       <dependency>
         <groupId>org.apache.spark</groupId>
-        <artifactId>spark-core_2.10</artifactId>
+        <artifactId>spark-core_${scala.binary.version}</artifactId>
         <version>${kite.spark.version}</version>
         <scope>provided</scope>
         <optional>true</optional>
