--- a/kite-data/kite-data-spark/pom.xml
+++ b/kite-data/kite-data-spark/pom.xml
@@ -105,7 +105,7 @@
     <!-- Spark -->
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.10</artifactId>
+      <artifactId>spark-core_${scala.binary.version}</artifactId>
       <exclusions>
         <exclusion>
           <groupId>org.apache.hadoop</groupId>
