KITE-1126: Update morphlines to use Solr6 instead of Solr4
(cherry picked from commit 5d1aa2603d4392047175257b457fa3d1825a0fec)
KITE-1126: Add optional flag to skip kite-morphlines-solr-* modules

(cherry picked from commit f7c1b213ea5e95f72d896857f8952d1a418e8937)
KITE-1126: Add optional flag to skip kite-morphlines-solr-* modules via mvn -P skip-kite-morphlines-solr

(cherry picked from commit bde75af2352efe940cce7acb452fc08f3176c0b3)

(cherry picked from commit ffeb8bbc6c5e4b507c70d5e9e99796d88d809a9c)

(cherry picked from commit ffeb8bbc6c5e4b507c70d5e9e99796d88d809a9c)

--- a/pom.xml
+++ b/pom.xml
@@ -152,8 +152,9 @@
     <vers.hbase>${cdh.hbase.version}</vers.hbase>
     <vers.hive>${cdh.hive.version}</vers.hive>
     <vers.jetty>8.1.14.v20131031</vers.jetty>
+    <vers.jetty.morphlines>9.3.8.v20160314</vers.jetty.morphlines>
     <vers.jexl>2.1.1</vers.jexl>
-    <vers.compress>1.4.1</vers.compress>
+    <vers.compress>1.8.1</vers.compress>
     <vers.junit>4.10</vers.junit>
     <vers.log4j>1.2.17</vers.log4j>
     <vers.maven>2.0.6</vers.maven>
