CLOUDERA-BUILD: Test fixes
CDH-53594: MiniDFSCluster time out resolution in unit tests by bumping jackson.fasterxml version.

CDH-53594: Mockito version correction for unit tests extending MiniDFSCluster

CDH-53594: Datanucleus dependencies are added for HiveMEtastore usage

CDH-53594: Datanucleus dependencies are added for HiveMEtastore usage in kite-tool pom.xml too

CDH-53594: Datanucleus dependencies are added to kite-hive, kite-crunch pom.xml files too

CLOUDERA-BUILD: Adding Derby dependency to kite-data-crunch and additional parameters to TestCrunchDatasetsHive to fix some test cases.

CLOUDERA-BUILD: Adding Derby dependency to kite-data-hive to fix some test cases.

CLOUDERA BUILD: Set Hive Metastore conf parameters to ensure proper behavio during Hive test executions

CLOUDERA BUILD: Add bonecp dependency to kite-data-hive to fix tests

CLOUDERA-BUILD: Increasing test execution memory limit to 1G.

CLOUDERA BUILD: Set Hive Metastore conf parameters to ensure proper behavior during cli commands test executions

CLOUDERA BUILD: Set Hive Metastore conf parameters to ensure proper behavior during cli commands test executions

CLOUDERA-BUILD: Bumping com.sun.jersey version to 1.19.4 to fix TestHDFSDatasetURIs.testAbsoluteWebHdfs.

CLOUDERA-BUILD: Bumping com.fasterxml.jackson to 2.7.8 in every module to fix TestMapReduce.

CLOUDERA-BUILD: Downgrading com.fasterxml.jackson to 2.6.5 to make TestSpark successful.

CLOUDERA-BUILD: Hive configuration is added to BeforeClass too to fix TestLog4jConfigurationCommand.

CLOUDERA-BUILD: Hive configuration is added to BeforeClass too to fix TestLog4jConfigurationCommand. The unnecessary configuration changes are removed.

CLOUDERA-BUILD: Hive Metastore config parameters are set to fix ValidMiniCluster test

Revert "CLOUDERA-BUILD: Bumping com.fasterxml.jackson to 2.7.8 in every module to fix TestMapReduce."

This reverts commit a8403ff5f9b79265a7423c6187ae3e75c3ee3ac2.

CLOUDERA-BUILD: kite-data-spark module uses jackson 2

--- a/kite-data/kite-data-hive/pom.xml
+++ b/kite-data/kite-data-hive/pom.xml
@@ -30,6 +30,13 @@
     The Kite Data Hive module provides integration with Hive for Kite datasets.
   </description>
 
+  <properties>
+    <datanucleus-rdbms.version>4.1.7</datanucleus-rdbms.version>
+    <datanucleus-api-jdo.version>4.2.1</datanucleus-api-jdo.version>
+    <datanucleus-core.version>4.1.6</datanucleus-core.version>
+    <datanucleus-jdo.version>3.2.0-m3</datanucleus-jdo.version>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -125,6 +132,44 @@
       <artifactId>kite-hadoop-compatibility</artifactId>
     </dependency>
 
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-minicluster</artifactId>
+      <version>${vers.hadoop}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${vers.jackson-hadoop}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${vers.mockito}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for Hive tests -->
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.10.2.0</version>
+    </dependency>
+
+    <!-- for Hive tests -->
+    <dependency>
+      <groupId>com.jolbox</groupId>
+      <artifactId>bonecp</artifactId>
+      <version>0.8.0.RELEASE</version>
+    </dependency>
+
     <!-- Avro, Parquet, and other formats -->
     <dependency>
       <groupId>org.apache.avro</groupId>
@@ -190,6 +235,51 @@
       <type>pom</type>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.datanucleus</groupId>
+      <artifactId>datanucleus-api-jdo</artifactId>
+      <version>${datanucleus-api-jdo.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.datanucleus</groupId>
+      <artifactId>datanucleus-rdbms</artifactId>
+      <version>${datanucleus-rdbms.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.datanucleus</groupId>
+      <artifactId>datanucleus-core</artifactId>
+      <version>${datanucleus-core.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.datanucleus</groupId>
+      <artifactId>javax.jdo</artifactId>
+      <version>${datanucleus-jdo.version}</version>
+    </dependency>
+
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
 </project>
