--- a/kite-maven-plugin/pom.xml
+++ b/kite-maven-plugin/pom.xml
@@ -147,6 +147,30 @@
       </exclusions>
     </dependency>
 
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-minicluster</artifactId>
+      <version>${vers.hadoop}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${vers.jackson-hadoop}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- for Hadoop MiniDFSCluster tests -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${vers.mockito}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -191,5 +215,25 @@
       </plugin>
     </plugins>
   </reporting>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${vers.jackson-hadoop}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
 </project>
