--- a/kite-data/kite-data-flume/pom.xml
+++ b/kite-data/kite-data-flume/pom.xml
@@ -64,7 +64,7 @@
                      property required for hadoop-1 -->
                 <property>
                   <name>thrift.version</name>
-                  <value>0.9.0</value>
+                  <value>${vers.thrift}</value>
                 </property>
               </properties>
             </configuration>
