--- a/kite-data/kite-data-spark/pom.xml
+++ b/kite-data/kite-data-spark/pom.xml
@@ -30,11 +30,6 @@
     The Kite Data Spark module provides Spark support for working with Kite datasets.
   </description>
 
-  <properties>
-    <!-- The Spark tests are failing with Jackson 2.7.8 so we needed to downgrade it to 2.6.5. -->
-    <spark.vers.jackson>2.6.5</spark.vers.jackson>
-  </properties>
-
   <build>
     <plugins>
       <plugin>
@@ -261,17 +256,17 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${spark.vers.jackson}</version>
+      <version>${vers.jackson}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>${spark.vers.jackson}</version>
+      <version>${vers.jackson}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>${spark.vers.jackson}</version>
+      <version>${vers.jackson}</version>
     </dependency>
 
   </dependencies>
