--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
     <solr.expected.version>${cdh.solr.version}</solr.expected.version> <!-- sanity check to verify we actually run against the expected version rather than some outdated version -->
     <vers.thrift>${cdh.thrift.version}</vers.thrift>
     <vers.tika>${cdh.tika.version}</vers.tika>
-    <vers.jackson>2.7.8</vers.jackson>
+    <vers.jackson>${cdh.jackson2.version}</vers.jackson>
     <vers.jackson-hadoop>2.7.8</vers.jackson-hadoop>
     <vers.opencsv>2.3</vers.opencsv>
     <vers.jodatime>${cdh.joda-time.version}</vers.jodatime>
