CDH-62821: Unify and update tika version across projects (cdh, search, solr, kite) to 1.16, which in turn requires commons-compress-1.14

--- a/kite-morphlines/pom.xml
+++ b/kite-morphlines/pom.xml
@@ -155,6 +155,11 @@
         <artifactId>kite-morphlines-protobuf</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>1.14</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
