--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
     <vers.thrift>${cdh.thrift.version}</vers.thrift>
     <vers.tika>${cdh.tika.version}</vers.tika>
     <vers.jackson>${cdh.jackson2.version}</vers.jackson>
-    <vers.jackson-hadoop>2.7.8</vers.jackson-hadoop>
+    <vers.jackson-hadoop>${cdh.jackson2.version}</vers.jackson-hadoop>
     <vers.opencsv>2.3</vers.opencsv>
     <vers.jodatime>${cdh.joda-time.version}</vers.jodatime>
     <vers.jcommander>1.35</vers.jcommander>
